CHANGE: Finalize GRNN codes.

--- a/OnlineNewsPopularity/KE5206_Computational_Intelligence_I_CA_1.ipynb
+++ b/OnlineNewsPopularity/KE5206_Computational_Intelligence_I_CA_1.ipynb
@@ -1438,18 +1438,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grid search for std parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davidleonardi/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1458,7 +1457,21 @@
       "Main information\n",
       "\n",
       "[ALGORITHM] GRNN\n",
-      "\r\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.1\n",
+      "\n",
+      "RMSE 0.016979933652799466 for std 0.1\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
       "[OPTION] verbose = True\n",
       "[OPTION] epoch_end_signal = None\n",
       "[OPTION] show_epoch = 1\n",
@@ -1466,129 +1479,27 @@
       "[OPTION] step = 0.1\n",
       "[OPTION] train_end_signal = None\n",
       "[OPTION] std = 0.2\n",
-      "\r\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.015979094998116"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import preprocessing\n",
-    "from neupy import algorithms, estimators, environment\n",
-    "\n",
-    "environment.reproducible()\n",
-    "\n",
-    "features, target = dataframe_split(new_df, 'shares')\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "    preprocessing.minmax_scale(features),\n",
-    "    preprocessing.minmax_scale(target.reshape((-1, 1))),\n",
-    "    test_size=0.3,\n",
-    ")\n",
-    "\n",
-    "grnn_model = algorithms.GRNN(std=0.2, verbose=True)\n",
-    "grnn_model.train(x_train, y_train)\n",
-    "\n",
-    "y_predicted = grnn_model.predict(x_test)\n",
-    "estimators.rmse(y_predicted, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davidleonardi/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
+      "RMSE 0.015979094998116 for std 0.2\n",
       "\n",
       "Main information\n",
       "\n",
       "[ALGORITHM] GRNN\n",
-      "\r\n",
+      "\n",
       "[OPTION] verbose = True\n",
       "[OPTION] epoch_end_signal = None\n",
       "[OPTION] show_epoch = 1\n",
       "[OPTION] shuffle_data = False\n",
       "[OPTION] step = 0.1\n",
       "[OPTION] train_end_signal = None\n",
-      "[OPTION] std = 0.3\n",
-      "\r\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.013804528077384734"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import preprocessing\n",
-    "from neupy import algorithms, estimators, environment\n",
-    "\n",
-    "environment.reproducible()\n",
-    "\n",
-    "features, target = dataframe_split(new_df, 'shares')\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "    preprocessing.minmax_scale(features),\n",
-    "    preprocessing.minmax_scale(target.reshape((-1, 1))),\n",
-    "    test_size=0.3,\n",
-    ")\n",
-    "\n",
-    "grnn_model = algorithms.GRNN(std=0.3, verbose=True)\n",
-    "grnn_model.train(x_train, y_train)\n",
-    "\n",
-    "y_predicted = grnn_model.predict(x_test)\n",
-    "estimators.rmse(y_predicted, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davidleonardi/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[OPTION] std = 0.30000000000000004\n",
+      "\n",
+      "RMSE 0.013804528077384734 for std 0.30000000000000004\n",
       "\n",
       "Main information\n",
       "\n",
       "[ALGORITHM] GRNN\n",
-      "\r\n",
+      "\n",
       "[OPTION] verbose = True\n",
       "[OPTION] epoch_end_signal = None\n",
       "[OPTION] show_epoch = 1\n",
@@ -1596,40 +1507,107 @@
       "[OPTION] step = 0.1\n",
       "[OPTION] train_end_signal = None\n",
       "[OPTION] std = 0.4\n",
-      "\r\n"
+      "\n",
+      "RMSE 0.010629390756787972 for std 0.4\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.5\n",
+      "\n",
+      "RMSE 0.009902532820857412 for std 0.5\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.6\n",
+      "\n",
+      "RMSE 0.00976167068598441 for std 0.6\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.7000000000000001\n",
+      "\n",
+      "RMSE 0.009722100842317194 for std 0.7000000000000001\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.8\n",
+      "\n",
+      "RMSE 0.009710691225888418 for std 0.8\n",
+      "\n",
+      "Main information\n",
+      "\n",
+      "[ALGORITHM] GRNN\n",
+      "\n",
+      "[OPTION] verbose = True\n",
+      "[OPTION] epoch_end_signal = None\n",
+      "[OPTION] show_epoch = 1\n",
+      "[OPTION] shuffle_data = False\n",
+      "[OPTION] step = 0.1\n",
+      "[OPTION] train_end_signal = None\n",
+      "[OPTION] std = 0.9\n",
+      "\n",
+      "RMSE 0.009712707494369508 for std 0.9\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.010629390756787972"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import preprocessing\n",
     "from neupy import algorithms, estimators, environment\n",
+    "import pickle\n",
     "\n",
     "environment.reproducible()\n",
     "\n",
-    "features, target = dataframe_split(new_df, 'shares')\n",
+    "params = np.linspace(0.1, 0.9, 9)\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "    preprocessing.minmax_scale(features),\n",
-    "    preprocessing.minmax_scale(target.reshape((-1, 1))),\n",
-    "    test_size=0.3,\n",
-    ")\n",
+    "best_rmse = 1\n",
+    "best_std = 0\n",
     "\n",
-    "grnn_model = algorithms.GRNN(std=0.4, verbose=True)\n",
-    "grnn_model.train(x_train, y_train)\n",
-    "\n",
-    "y_predicted = grnn_model.predict(x_test)\n",
-    "estimators.rmse(y_predicted, y_test)"
+    "for std in params:\n",
+    "    grnn = algorithms.GRNN(std=std, verbose=True)\n",
+    "    grnn.train(x_train, y_train)\n",
+    "    \n",
+    "    y_predicted = grnn.predict(x_test)\n",
+    "    rmse = estimators.rmse(y_predicted, y_test)\n",
+    "    print(\"RMSE {} for std {}\".format(rmse, std))\n",
+    "    if rmse < best_rmse:\n",
+    "        best_rmse = rmse\n",
+    "        best_std = std\n",
+    "        \n",
+    "        with open('grnn.pickle', 'wb') as f:\n",
+    "            pickle.dump(grnn, f)"
    ]
   },
   {
