BUGFIX: Fix error from fillna function return value.

--- a/Zillow/KE5206_Computational_Intelligence_I_CA_1.ipynb
+++ b/Zillow/KE5206_Computational_Intelligence_I_CA_1.ipynb
@@ -1751,7 +1751,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_features_df = good_features_df.fillna(good_features_df.mean(), inplace=True)"
+    "good_features_df = good_features_df.fillna(good_features_df.mean())"
    ]
   },
   {
