--- a/Zillow/plot.Rmd
+++ b/Zillow/plot.Rmd
@@ -30,3 +30,12 @@ data %>% ggplot(aes(x=longitude,y=abs_logerror))+geom_smooth(color="blue")+theme
 ```{r}
 data %>% ggplot(aes(x=yearbuilt,y=abs_logerror))+geom_smooth(color="blue")+theme_bw()
 ```
+
+This the area where Zestimate both under and over predict.
+```{r}
+leaflet() %>% 
+  addTiles() %>% 
+  fitBounds(-118.5,33.8,-118.25,34.15) %>% 
+  addRectangles(-118.5,33.8,-118.25,34.15) %>% 
+  addMiniMap()
+```
